# os-twitter-bot

./: .gitignore  .pre-commit-config.yaml  .tool-versions  Procfile  README.md  alembic.ini  env-local  package.json  pyproject.toml  requirements.txt  shipitfile.js
alembic/: env.py
alembic/versions/: 25a55249b373_create_vandul_sales_table.py  614217d47fd5_add_new_tweeted_at_column.py  cd50e65c511b_create_streemelt_jobs_table.py
config/: console.py
scripts/: base.py  bot.py  db.py  lint.py  server.py  test.py
src/models/: model.py
src/schedulers/: kanz_sales_30_secs.py  kanz_sales_tweet_backlog.py  society_sales_30_secs.py  society_sales_tweet_backlog.py  streetmelt_sales_30_secs.py  streetmelt_sales_tweet_backlog.py
src/utils/: healthz.py  opensea.py  schemas.py  twitter_bot.py  utilities.py
